--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,6 +27,10 @@ jobs:
           nix build "${{ matrix.triple }}":images-to-pdf:exe:images-to-pdf
           mkdir -p dist
           cp result/bin/"${{ matrix.path }}" dist/
+      - name: Upload
+        uses: actions/upload-artifact@v4
+        with:
+          path: dist/"${{ matrix.path }}"
 
   release:
     needs: build
