--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,6 +39,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            dist/images-to-pdf.exe
+            images-to-pdf.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
