--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,6 +10,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - triple: .#x86_64-unknown-linux-musl
+            path: images-to-pdf
           - triple: .#x86_64-w64-mingw32
             path: images-to-pdf.exe
     runs-on: ubuntu-latest
@@ -43,6 +45,8 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            images-to-pdf.exe
+            artifact
+            artifact/images-to-pdf
+            artifact/images-to-pdf.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
