--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,9 +10,11 @@ jobs:
     strategy:
       matrix:
         include:
-          - triple: .#x86_64-unknown-linux-musl
+          - name: Linux
+            triple: .#x86_64-unknown-linux-musl
             path: images-to-pdf
-          - triple: .#x86_64-w64-mingw32
+          - name: Windows
+            triple: .#x86_64-w64-mingw32
             path: images-to-pdf.exe
     runs-on: ubuntu-latest
     steps:
@@ -29,7 +31,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.path }}
+          name: ${{ matrix.name }}
           path: result/bin/${{ matrix.path }}
 
   release:
@@ -46,8 +48,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            artifact
-            artifact/images-to-pdf
-            artifact/images-to-pdf.exe
+            Linux
+            Windows
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
